# curves

./: .gitignore  CMakeLists.txt  README.md  package.xml
curves/: CMakeLists.txt  package.xml
curves/include/curves/: CubicHermiteE3Curve.hpp  CubicHermiteSE3Curve.hpp  Curve.hpp  DiscreteSE3Curve.hpp.unused  KeyGenerator.hpp  LinearInterpolationVectorSpaceCurve-inl.hpp  LinearInterpolationVectorSpaceCurve.hpp  LocalSupport2CoefficientManager-inl.hpp  LocalSupport2CoefficientManager.hpp  PolynomialSpline.hpp  PolynomialSplineContainer.hpp  PolynomialSplineContainer.tpp  PolynomialSplineScalarCurve.hpp  PolynomialSplineVectorSpaceCurve.hpp  Pose2_Expressions.hpp.unused  SE2Config.hpp.unused  SE2Curve.hpp  SE3CompositionCurve-inl.hpp  SE3CompositionCurve.hpp  SE3Config.hpp  SE3Curve.hpp  SE3CurveFactory.hpp.unused  SamplingPolicy.hpp  ScalarCurveConfig.hpp  SemiDiscreteSE3Curve.hpp.unused  SlerpSE2Curve.hpp.unused  SlerpSE3Curve.hpp  VectorSpaceConfig.hpp  VectorSpaceCurve.hpp  helpers.hpp  polynomial_splines.hpp  polynomial_splines_traits.hpp
curves/src/: CubicHermiteE3Curve.cpp  CubicHermiteSE3Curve.cpp  DiscreteSE3Curve.cpp.unused  SE2Curve.cpp.unused  SE3Curve.cpp  SE3CurveFactory.cpp.unused  SemiDiscreteSE3Curve.cpp.unused  SlerpSE2Curve.cpp.unused  SlerpSE3Curve.cpp  helpers.cpp  polynomial_splines_traits.cpp
curves/test/: CubicHermiteSE3CurveTest.cpp  PolynomialSplineContainerTest.cpp  PolynomialSplineQuinticScalarCurveTest.cpp  PolynomialSplineVectorSpaceCurveTest.cpp  PolynomialSplinesTest.cpp  test_LocalSupport2CoefficientManager.cpp
curves_ros/: CMakeLists.txt  package.xml
curves_ros/include/curves_ros/: RosJointTrajectoryInterface.hpp  RosMultiDOFJointTrajectoryInterface.hpp  RosMultiDOFJointTrajectoryTranslationInterface.hpp
curves_ros/src/: RosJointTrajectoryInterface.cpp  RosMultiDOFJointTrajectoryInterface.cpp  RosMultiDOFJointTrajectoryTranslationInterface.cpp
doc/doxygen/: CMakeLists.txt
include/curves/: CubicHermiteSE3Curve.hpp  Curve.hpp  KeyGenerator.hpp  LocalSupport2CoefficientManager.hpp  LocalSupport2CoefficientManager.tpp  PolynomialSpline.hpp  PolynomialSplineContainer.hpp  PolynomialSplineContainer.tpp  PolynomialSplineScalarCurve.hpp  PolynomialSplineVectorSpaceCurve.hpp  SE3CompositionCurve.hpp  SE3CompositionCurve.tpp  SE3Curve.hpp  SamplingPolicy.hpp  SlerpSE3Curve.hpp  VectorSpaceConfig.hpp  helpers.hpp  polynomial_splines_containers.hpp  polynomial_splines_traits.hpp
src/: CubicHermiteE3Curve.cpp  CubicHermiteSE3Curve.cpp  KeyGenerator.cpp  SlerpSE3Curve.cpp  polynomial_splines_traits.cpp
test/: PolynomialSplineContainerTest.cpp  PolynomialSplinesTest.cpp  test_Hermite.cpp.unused  test_SE3Coefficient.cpp.unused  test_main.cpp
