<?xml version="1.0"?>

<package format="2">

  <name>curves</name>
  <version>0.4.17</version>
  <description>Curves spline library.</description>

  <maintainer email="vyuryev@anybotics.com">Valentin Yuryev</maintainer>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>

  <license>BSD</license>

  <url>https://github.com/anybotics/curves</url>

  <author>Renaud Dubé</author>
  <author>Abel Gawel</author>
  <author>Péter Fankhauser</author>
  <author>Dario Bellicoso</author>
  <author>Christian Gehring</author>
  <author>Mike Bosse</author>
  <author>Paul Furgale</author>
  <author>Gabriel Agamennoni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kindr</depend>
  <depend>message_logger</depend>
  <depend>std_utils</depend>

  <build_export_depend>eigen</build_export_depend>

<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <test_depend>gtest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->

</package>
