<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>curves</name>
  <version>0.4.23</version>
  <description>Curves spline library.</description>
  <author>Renaud Dubé</author>
  <author>Abel Gawel</author>
  <author>Péter Fankhauser</author>
  <author>Dario Bellicoso</author>
  <author>Christian Gehring</author>
  <author>Mike Bosse</author>
  <author>Paul Furgale</author>
  <author>Gabriel Agamennoni</author>
  <maintainer email="psankar@anybotics.com">Prajish Sankar</maintainer>
  <maintainer email="psutter@anybotics.com">Pascal Sutter</maintainer>
  <license>BSD</license>
  <url>https://github.com/anybotics/curves</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
<!--   <build_depend condition="$ROS_VERSION == 1">cmake_clang_tools</build_depend> -->
  <build_export_depend>eigen</build_export_depend>
  <depend>kindr</depend>
  <depend>message_logger</depend>
  <depend>std_utils</depend>
  <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
<!--   <test_depend condition="$ROS_VERSION == 1">cmake_code_coverage</test_depend> -->
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
